@@ -35,3 +35,5 @@
 2018-07-19
 	- New exception handler. 
 	- New way for searching for users by ID, name, nickname, or direct mention. 
+2018-07-19
+	- Very basic message counting implementation. 
